--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ footer {
   margin: 10px;
   background-color: white;
 }
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
 
   h1 {
     font-size: 3rem;
