--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ footer {
 }
 
 .set {
-  margin: 5% auto;
+  margin: 0;
 }
 
 .game-over {
@@ -67,7 +67,7 @@ footer {
 
 .red {
   color: red;
-}
+} 
 
 .drum {
   outline: none;
@@ -86,7 +86,7 @@ footer {
   margin: 10px;
   background-color: white;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
 
   h1 {
     font-size: 3rem;
@@ -118,53 +118,51 @@ footer {
    
   .w {
     background-image: url(./images/tom4.png);
-    width: 300px;
-    height: 400px;
+    width: 150px;
+    height: 150px;;
   
   }
   
   .a {
     background-image: url(./images/tom3.png);
-    width: 300px;
-    height: 400px;
+    width: 150px;
+    height: 150px;
   
   }
   
   .s {
     background-image: url(./images/tom2.png);
-    width: 300px;
-    height: 400px;
+    width: 150px;
+    height: 150px;
   
   }
   
   .d {
     background-image: url(./images/tom1.png);
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
   
   }
   
   .j {
     background-image: url(./images/snare.png);
-    width: 300px;
-    height: 400px;
+    width: 150px;
+    height: 150px;
   
   }
   
   .k {
     background-image: url(./images/kick.png);
-    width: 300px;
-    height: 400px;
+    width: 150px;
+    height: 150px;
   
   }
   
   .l {
     background-image: url(./images/crash.png);
-    width: 300px;
-    height: 400px;
+    width: 150px;
+    height: 150px;
   
   }
-  /* body{
-    align-items: center;s
-  } */
+
 } 
