--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+     width:250px;
   }
   .container2{
     display: flex;
